--- a/templates/register.html
+++ b/templates/register.html
@@ -307,7 +307,7 @@
   </div>
   <div class='login'>
     <div class='login_title'>
-      <span>Complete your Nexus™ Registration</span>
+      <span>Complete Nexus™ Registration</span>
     </div>
     <div class='login_fields'>
       <div class='login_fields__user'>
