--- a/templates/access.html
+++ b/templates/access.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{url_for('static',filename='css/vertical-layout-dark/style.css')}}"> <!-- endinject -->
   <link rel="shortcut icon" href="{{url_for('static',filename='img/logo/nexus-icon.png')}}" />
   <style>
-    .btn {
+    .btn-download {
       position: relative;
       background: -webkit-gradient(linear, right top, left top, from(#EE7752), color-stop(#E73C7E), color-stop(#23A6D5), color-stop(#23D5AB), to(#EE7752));
       background: linear-gradient(-90deg, #EE7752, #E73C7E, #23A6D5, #23D5AB, #EE7752);
@@ -28,7 +28,7 @@
       text-decoration: none;
     }
 
-    .btn div {
+    .btn-download div {
       height: 100%;
       background-color: #1d1d1d;
       display: -webkit-box;
@@ -68,7 +68,7 @@
       }
     }
 
-    .btn::after {
+    .btn-download::after {
       content: '';
       position: absolute;
       background-size: inherit;
@@ -177,9 +177,10 @@
                       <span style="font-size: 17px">Nexus™ Cloud (Windows)</span>
                     </button>
                     <div>
-                      <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfTaa-_wOFOQv3dZ7Ord9TJ3vN8wNdzUY5VQqzFiTg_WMQwEw/viewform?c=0&w=1">
+                      <a class="btn-download" href="/">
                         <div>
-                          new talk proposal
+                          <i class="ti-download btn-icon-prepend"></i>
+                          Nexus™ Cloud (Mac)
                         </div>
                       </a>
                     </div>
