--- a/templates/access.html
+++ b/templates/access.html
@@ -187,16 +187,16 @@
                   <p class="card-description">The Nexus™ Cloud</p>
                   <div class="template-demo">
                     <div>
-                      <a class="btn btn-download-mac btn-block" href="/">
+                      <a class="btn btn-download btn-download-mac btn-block" href="/">
                         <div>
                           Nexus™ Cloud (Mac)
                         </div>
                       </a>
                     </div>
                     <div style="padding-top:5px;">
-                      <a class="btn btn btn-download-windows btn-block" href="/">
+                      <a class="btn btn-download btn-download-windows btn-block" href="/">
                         <div>
-                          Nexus™ Cloud (Window)
+                          Nexus™ Cloud (Windows)
                         </div>
                       </a>
                     </div>
