--- a/templates/access.html
+++ b/templates/access.html
@@ -107,8 +107,8 @@
   <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"> <a class="navbar-brand brand-logo mr-5" href="/"><img src="{{url_for('static',filename='img/logo/nexus-gradient-full.svg')}}" class="mr-2"
-            alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="/"><img src="{{url_for('static',filename='img/logo/nexus-icon-white.svg')}}" alt="logo" /></a> </div>
+      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"> <a class="navbar-brand brand-logo mr-5" href="/"><img src="{{url_for('static',filename='img/logo/nexus-logo-gradient.svg')}}" class="mr-2"
+            alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="/"><img src="{{url_for('static',filename='img/logo/nexus-gradient-full.svg')}}" alt="logo" /></a> </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end"> <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize"> <span class="ti-layout-grid2"></span> </button>
         <ul class="navbar-nav mr-lg-2">
           <li class="nav-item nav-search d-none d-lg-block">
@@ -187,14 +187,14 @@
                   <p class="card-description">The Nexus™ Cloud</p>
                   <div class="template-demo">
                     <div>
-                      <a class="btn btn-download btn-download-mac btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The+Virtual+Villeage.dmg">
+                      <a class="btn btn-download btn-download-mac btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The-Virtual-Villeage-v0.0.1.dmg">
                         <div>
                           Nexus™ Cloud (Mac)
                         </div>
                       </a>
                     </div>
                     <div style="padding-top:5px;">
-                      <a class="btn btn-download btn-download-windows btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The+Virtual+Villeage.dmg">
+                      <a class="btn btn-download btn-download-windows btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The-Virtual-Villeage-v0.0.1.dmg">
                         <div>
                           Nexus™ Cloud (Windows)
                         </div>
