--- a/templates/index.html
+++ b/templates/index.html
@@ -393,9 +393,9 @@
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
                   <h3 class="heading">our mission</h3>
-                  <h2>We're motivated by the <span class="theme-creative">desire to achieve.</span></h2>
+                  <h2>A virtual alternative to <span class="theme-creative">physical community events.</span></h2>
                 </div>
-                <p class="wow move-up">Nexus is a cross-platform, multiplayer, location-simulating application that provides the users with a virtual community-event experience. With the outbreak of the novel COVID-19 virus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending. Through an online, event-centric, location-simulating, multiplayer role-playing application, our goal is to provide a virtual alternative to physical location-based community events, e.g. the end-of-year graduation ceremony experience for high-school seniors, while upholding health regulations and our collective social responsibilities. .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                <p class="wow move-up">Nexus is an immersive, cross-platform, multiplayer, role-playing application framework that provides the users with a virtual community-event experience. With the outbreak of the novel coronavirus, social-distancing regulations have widely been enforced throughout the world. As a result, institutions have been forced to close down their physical establishments, canceling many events their communities have looked forward to attending. Our goal is to provide a virtual alternative to physical location-based events, e.g. the end-of-year graduation ceremony experience for high-school seniors while upholding health regulations and our collective social responsibilities. </p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
                     class="fa fa-arrow-right"></i></a>
               </div>
             </div>
@@ -411,9 +411,9 @@
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
                   <h3 class="heading">our technology</h3>
-                  <h2>Dynamic event system <span class="theme-creative">through Unity.</span></h2>
+                  <h2>Stunning, life-like simulations <span class="theme-creative">powered by Google Maps & Unity.</span></h2>
                 </div>
-                <p class="wow move-up">Nexus is a dynamic event platform regulated by system admins who will be able to create their own customized events based in a 3-dimensional world, enhanced to look as realistic as possible through advanced rendering methods developed on the Unity gaming platform. Our platform utilizes realistic school-building terrain models imported from Google Earth which are enhanced by animated graphics. Our features are equipped with customizable avatars, based in an immersive experience enhanced with a spacial sound system to allow live, real voice communication and interaction with other players.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                <p class="wow move-up">Nexus offers a secure, administrator-regulated platform to host customized events based in a three-dimensional world. The application is optimized to perform well across a broad spectrum of devices with enhanced visual fidelity to look as realistic as possible utilizing the Unity3D game engine's High Definition Render Pipeline (HDRP). Our platform is powered by Google Maps to create stunning, life-like representations of real-world locations. With customizable avatars, based in an immersive experience enhanced with a spatial sound system to allow live, realtime voice communication and interaction with other players.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
                     class="fa fa-arrow-right"></i></a>
               </div>
             </div>
@@ -747,7 +747,10 @@
                 <div class="call-to-action callto-action--1">
                   <div class="content">
                     <h6>Host your events in no time</h6>
-                    <h3>Ready to enjoy <span>a virtual event ?</span></h3> <button><span>Contact us</span><i class="fa fa-arrow-right"></i></button>
+                    <h3>Ready to enjoy <span>a virtual event ?</span></h3>
+                    <form action="/connect">
+                      <button><span>Contact us</span><i class="fa fa-arrow-right"></i></button>
+                    </form>
                   </div>
                 </div>
               </div>
