--- a/templates/register.html
+++ b/templates/register.html
@@ -324,7 +324,7 @@
         <div class='icon'>
           <i class="fas fa-key"></i>
         </div>
-        <input id="pass" placeholder='Password' type='password'>
+        <input id="pass" placeholder='Set Password' type='password'>
         <div class='validation'>
           <i class="fas fa-check"></i>
         </div>
