--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -187,14 +187,14 @@
                   <p class="card-description">The Nexus™ Cloud</p>
                   <div class="template-demo">
                     <div>
-                      <a class="btn btn-download btn-download-mac btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The-Virtual-Villeage-v0.0.1.dmg">
+                      <a class="btn btn-download btn-download-mac btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/Nexus.dmg">
                         <div>
                           Nexus™ Cloud (Mac)
                         </div>
                       </a>
                     </div>
                     <div style="padding-top:5px;">
-                      <a class="btn btn-download btn-download-windows btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/The-Virtual-Villeage-v0.0.1.dmg">
+                      <a class="btn btn-download btn-download-windows btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/Nexus.dmg">
                         <div>
                           Nexus™ Cloud (Windows)
                         </div>
