--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,8 @@
                       </li>
                       <li class="lavel-1 slide--megamenu"><a href="/access"><span style="font-family: Roboto; font-weight: 200;">Portal</span></a> <!-- Start Mega Menu -->
                       </li>
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Who we are</span></a> <!-- Start Mega Menu -->
+                      </li>
                     </ul>
                   </nav>
                 </div> <!-- Header Right -->
