--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -55,6 +55,8 @@
                       <li class="lavel-1 slide--megamenu"><a href="/auth/google"><span style="font-family: Roboto; font-weight: 200;">Login</span></a> <!-- Start Mega Menu -->
                       {% endif %}
                       </li>
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Who we are</span></a> <!-- Start Mega Menu -->
+                      </li>
                     </ul>
                   </nav>
                 </div> <!-- Header Right -->
