--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -384,6 +384,12 @@
     </div> <!-- END REVOLUTION SLIDER -->
     <!-- Page Conttent -->
     <main class="page-content">
+      <div class="brook-row-column-area bg_color--1 constellation-effect">
+                <canvas width="1440" height="821"></canvas>
+                <div class="row-column-content">
+                    <h3 class="heading heading-h3 text-center">Constellation Effect</h3>
+                </div>
+            </div>
       <!-- Start About Area -->
       <div class="bk-about-area section-ptb-100" id="section-about">
         <div class="container">
