--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Why Nexus?</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="/why-nexus"><span style="font-family: Roboto; font-weight: 200;">Why Nexus?</span></a> <!-- Start Mega Menu -->
                       </li>
                       <li class="lavel-1 slide--megamenu"><a href="/connect"><span style="font-family: Roboto; font-weight: 200;">Connect</span></a> <!-- Start Mega Menu -->
                       </li>
