--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -55,7 +55,7 @@
                       <li class="lavel-1 slide--megamenu"><a href="/auth/google"><span style="font-family: Roboto; font-weight: 200;">Login</span></a> <!-- Start Mega Menu -->
                       {% endif %}
                       </li>
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Who we are</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Home</span></a> <!-- Start Mega Menu -->
                       </li>
                     </ul>
                   </nav>
@@ -343,7 +343,7 @@
               data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-family: Roboto; font-weight: 200; color: #ffffff; letter-spacing: 0px">Nexus <span class="secondary-font" style="font-style: italic;">Reality</span> </div>
+              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-family: Roboto; font-weight: 200; color: #ffffff; letter-spacing: 0px">Why <span class="secondary-font" style="font-style: italic;">Nexus?</span> </div>
             <!-- LAYER NR. 3 -->
             <div class="tp-caption " id="slide-7-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['54','54','70','50']" data-width="none"
               data-height="none" data-whitespace="nowrap" data-type="image" data-responsive_offset="off" data-responsive="off"
@@ -354,7 +354,6 @@
               data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['570','570','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":900,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 8; min-width: 570px; max-width: 570px; white-space: normal; font-size: 18px; font-family: Roboto; line-height: 30px; font-weight: 100; color: #ffffff; letter-spacing: 0px;">Gatherings, reinvented. — Your portal to a nexus of virtual events.</i></div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
               data-y="['bottom','bottom','bottom','bottom']" data-voffset="['110','110','50','50']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="image" data-actions='' data-basealign="slide" data-responsive_offset="off"
               data-responsive="off" data-frames='[{"delay":1000,"speed":1000,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9;text-decoration: none;">
