--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -323,7 +323,7 @@
           <!-- SLIDE -->
           <li data-index="rs-7" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off"
             data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-            <!-- MAIN IMAGE --> <img src="{{url_for('static',filename='img/bg/bg.jpg')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+            <!-- MAIN IMAGE --> <img src="{{url_for('static',filename='img/bg/prev6.jpg')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
             <!-- LAYER NR. 1 -->
             <div class="tp-caption " id="slide-7-layer-11" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-220','-220','-220','-220']" data-width="130"
@@ -354,6 +354,7 @@
               data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['570','570','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":900,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+              style="z-index: 8; min-width: 570px; max-width: 570px; white-space: normal; font-size: 18px; font-family: Roboto; line-height: 30px; font-weight: 100; color: #ffffff; letter-spacing: 0px;"> </i></div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
               data-y="['bottom','bottom','bottom','bottom']" data-voffset="['110','110','50','50']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="image" data-actions='' data-basealign="slide" data-responsive_offset="off"
               data-responsive="off" data-frames='[{"delay":1000,"speed":1000,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9;text-decoration: none;">
