--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -55,7 +55,7 @@
                       <li class="lavel-1 slide--megamenu"><a href="/auth/google"><span style="font-family: Roboto; font-weight: 200;">Login</span></a> <!-- Start Mega Menu -->
                       {% endif %}
                       </li>
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Home</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="/index"><span style="font-family: Roboto; font-weight: 200;">Home</span></a> <!-- Start Mega Menu -->
                       </li>
                     </ul>
                   </nav>
@@ -384,12 +384,22 @@
     </div> <!-- END REVOLUTION SLIDER -->
     <!-- Page Conttent -->
     <main class="page-content">
-    <div class="brook-row-column-area bg_color--1 constellation-effect">
-                <canvas width="1440" height="821"></canvas>
-                <div class="row-column-content">
-                    <h3 class="heading heading-h3 text-center">Constellation Effect</h3>
+      <div class="brook-row-column-area bg_color--1 poss_relative">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="row-column-content ptb--100 ptb-md--80 ptb-sm--60 wow move-up  animate" style="visibility: visible; opacity: 0;">
+                                    <h3 class="heading heading-h3 text-center">Our Vision</h3>
+                                    <p class="bk_pra mt--40">Our goal is to provide a virtual alternative to physical location-based community events</p>
+                                    <div class="separator"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vc_row-separator tilt_right--bottom"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 4 0.266661" preserveAspectRatio="none">
+                            <polygon class="fil0" points="4,0 4,0.266661 -0,0.266661 "></polygon>
+                        </svg></div>
                 </div>
-        </div>
       <!-- Start About Area -->
       <div class="bk-about-area section-ptb-100" id="section-about">
         <div class="container">
