--- a/templates/why-nexus.html
+++ b/templates/why-nexus.html
@@ -568,7 +568,7 @@
                         <div class="col-lg-7 col-12">
                             <div class="video-with-thumb text-center move-up wow animate" style="visibility: visible; opacity: 0;">
                                 <div class="thumb">
-                                    <img src="img/about/macbook-02.png" alt="video images">
+                                    <img src="img/others/pic1.png" alt="video images">
                                 </div>
                             </div>
                         </div>
