--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
   <title>Nexus // Virtual Events</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!-- Favicon -->
-  <link rel="shortcut icon" href="{{url_for('static',filename='img/favicon.ico')}}" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{{url_for('static',filename='img/icon.png')}}"> <!-- Plugins -->
+  <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}"> <!-- Plugins -->
   <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/revoulation.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/plugins.css')}}"> <!-- Style Css -->
@@ -332,7 +332,7 @@
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
               style="z-index: 5; min-width: 130px; max-width: 130px; max-width: 130px; max-width: 130px; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #ffffff; letter-spacing: 0px;">
               <!-- Start Single Popup -->
-              <div class="video-btn-2"> <a class="play__btn" href="https://www.youtube.com/watch?v=9No-FiEInLA">
+              <div class="video-btn-2"> <a class="play__btn" href="https://www.youtube.com/watch?v=Wwkk3cgOOI8">
                   <div class="icon-gradient color-pink">
                     <div class="video-icon"></div>
                   </div>
