--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
   <title>Nexus // Virtual Events</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!-- Favicon -->
-  <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}"> <!-- Plugins -->
+  <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.png')}}" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{{url_for('static',filename='img/icons/nexus-icon.png')}}"> <!-- Plugins -->
   <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/revoulation.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='css/plugins.css')}}"> <!-- Style Css -->
@@ -39,7 +39,7 @@
             <div class="header__wrapper mr--0">
               <!-- Header Left -->
               <div class="header-left flex-20">
-                <div class="logo"> <a href="{{url_for('static',filename='index.html')}}"> <img src="{{url_for('static',filename='img/logo/nexus-logo-small.png')}}" alt="Brook Images"> </a> </div>
+                <div class="logo"> <a href="{{url_for('static',filename='index.html')}}"> <img src="{{url_for('static',filename='img/logo/nexus-logo-white.png')}}" alt="Brook Images"> </a> </div>
               </div> <!-- Mainmenu Wrap -->
               <div class="header-flex-right flex-80">
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
