--- a/templates/connect.html
+++ b/templates/connect.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
         <link href='custom.css' rel='stylesheet' type='text/css'>
-        <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}" />
+        <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.png')}}" />
     </head>
     <body style="background-color:#413E4A">
 
