--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{{url_for('static',filename='vendors/ti-icons/css/themify-icons.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='vendors/css/vendor.bundle.base.css')}}"> <!-- endinject -->
   <link rel="stylesheet" href="{{url_for('static',filename='css/vertical-layout-dark/style.css')}}"> <!-- endinject -->
-  <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.ico')}}" />
+  <link rel="shortcut icon" href="{{url_for('static',filename='img/icons/nexus-icon.png')}}" />
   <style>
     .btn-download-mac {
       position: relative;
