--- a/templates/register.html
+++ b/templates/register.html
@@ -310,7 +310,7 @@
       <span>Complete Nexus™ Registration</span>
     </div>
     <div class='login_fields'>
-      <div class='login_fields__user'>
+      <!-- <div class='login_fields__user'>
         <div class='icon'>
           <i class="fas fa-user"></i>
         </div>
@@ -319,7 +319,7 @@
           <i class="fas fa-check"></i>
         </div>
         </input>
-      </div>
+      </div> -->
       <div class='login_fields__password'>
         <div class='icon'>
           <i class="fas fa-key"></i>
@@ -330,7 +330,7 @@
         </div>
       </div>
       <div class='login_fields__submit'>
-        <input type='submit' value='Register'>
+        <input type='submit' value='Register' onclick="submitNewPassword()">
         <div class='forgot'>
           <a href='#'>Already registered?</a>
         </div>
@@ -352,6 +352,7 @@
     <p>Copyright © 2020 <a href="http://www.thenexus.cloud/" target="_blank">Nexus</a>. All rights reserved.</span></p>
   </div>
   <script>
+
     function submitNewPassword(){
       pass = document.getElementById("pass").value
       axios({
@@ -363,6 +364,7 @@
       }).catch(e=>console.log(e)).then(data => {alert(data["data"]); window.location.reload();})
       return false;
     }
+
   </script>
   <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
