--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -187,7 +187,7 @@
                   <p class="card-description">The Nexus™ Cloud</p>
                   <div class="template-demo">
                     <div>
-                      <a class="btn btn-download btn-download-mac btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/Nexus.dmg">
+                      <a class="btn btn-download btn-download-mac btn-block" href="https://dl.patchkit.net/d/9rb5g7">
                         <div>
                           Nexus™ Cloud (Mac)
                         </div>
