--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -194,7 +194,7 @@
                       </a>
                     </div>
                     <div style="padding-top:5px;">
-                      <a class="btn btn-download btn-download-windows btn-block" href="https://the-nexus-cloud.s3.amazonaws.com/Nexus.dmg">
+                      <a class="btn btn-download btn-download-windows btn-block" href="https://dl.patchkit.net/d/91z87q/direct">
                         <div>
                           Nexus™ Cloud (Windows)
                         </div>
