--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                       {% if logged_in %}
                       <li class="lavel-1 slide--megamenu"><a href="/access"><span class="theme-creative">Portal</span></a> <!-- Start Mega Menu -->
                       {% else %}
-                      <li class="lavel-1 slide--megamenu"><a href="/auth/google"><span style="font-family: Roboto; font-weight: 200;">Login</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="/auth/google"><span class="theme-creative">Login</span></a> <!-- Start Mega Menu -->
                       {% endif %}
                       </li>
                     </ul>
