--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -119,7 +119,7 @@
           </li>
         </ul>
         <ul class="navbar-nav navbar-nav-right">
-          <li class="nav-item nav-settings d-none d-lg-flex"> <a class="nav-link" href="#"> <i class="ti-more"></i> </a> </li>
+          <li class="nav-item nav-settings d-none d-lg-flex"> <a class="nav-link" href="/logout" style="background-color:white; color:black;padding:3px 10px; border-radius:5px"> Log Out </a> </li>
         </ul> <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas"> <span class="ti-layout-grid2"></span> </button>
       </div>
     </nav> <!-- partial -->
