--- a/templates/portals/lawrenceville.html
+++ b/templates/portals/lawrenceville.html
@@ -174,6 +174,20 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-5 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Your account pin</h4>
+                  <p class="card-description">You have to use this pin to log into your account within the Nexus App</p>
+                  <div class="template-demo">
+                    <h1>{{password}}</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div> <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
