--- a/templates/index.html
+++ b/templates/index.html
@@ -387,7 +387,7 @@
         <div class="container">
           <div class="row about--creative align-items-center">
             <div class="col-lg-6 col-md-12 col-12">
-              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image.png')}}" alt="about images"> </div>
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image-2.png')}}" alt="about images"> </div>
             </div>
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
@@ -418,7 +418,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-12">
-              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image.png')}}" alt="about images"> </div>
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image-3.png')}}" alt="about images"> </div>
             </div>
           </div>
         </div>
