--- a/templates/index.html
+++ b/templates/index.html
@@ -330,7 +330,7 @@
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
               style="z-index: 5; min-width: 130px; max-width: 130px; max-width: 130px; max-width: 130px; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #ffffff; letter-spacing: 0px;">
               <!-- Start Single Popup -->
-              <div class="video-btn-2"> <a class="play__btn" href="https://www.youtube.com/watch?v=Wwkk3cgOOI8">
+              <div class="video-btn-2"> <a class="play__btn" href="https://www.youtube.com/watch?v=0xlcuqARsis">
                   <div class="icon-gradient color-pink">
                     <div class="video-icon"></div>
                   </div>
