--- a/templates/index.html
+++ b/templates/index.html
@@ -564,9 +564,9 @@
               <div class="number-speaks-wrapper">
                 <div class="content wow move-up">
                   <div class="title--creative text-left">
-                    <h3 class="heading">NUMBER SPEAKS</h3>
-                    <h2>Always ready <br> for <span class="theme-creative">a challenge.</span></h2>
-                    <p>Nothing is more important than having a <br> desire deep down to achieve goals.</p>
+                    <h3 class="heading"></h3>
+                    <h2>Our platform <br> is <span class="theme-creative"> modular.</span></h2>
+                    <p>Environments are easily ported using Google Maps integration, instantly allowing access to the Nexus multiplayer experience</p>
                   </div>
                 </div>
               </div>
