--- a/templates/index.html
+++ b/templates/index.html
@@ -321,7 +321,7 @@
           <!-- SLIDE -->
           <li data-index="rs-7" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off"
             data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-            <!-- MAIN IMAGE --> <img src="{{url_for('static',filename='img/bg/')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+            <!-- MAIN IMAGE --> <img src="{{url_for('static',filename='img/bg/nexus-banner.png')}}" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
             <!-- LAYER NR. 1 -->
             <div class="tp-caption " id="slide-7-layer-11" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-220','-220','-220','-220']" data-width="130"
