--- a/templates/index.html
+++ b/templates/index.html
@@ -460,6 +460,70 @@
               </div>
             </div> <!-- End Single Service -->
           </div>
+          <div class="row">
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Realtime Multiplayer</h4>
+                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Customizable Avatars</h4>
+                  <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Google Maps Integration</h4>
+                  <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+          </div>
+          <div class="row">
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Realtime Multiplayer</h4>
+                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Customizable Avatars</h4>
+                  <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+            <!-- Start Single Service -->
+            <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
+              <div class="service service--2">
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="content" style="text-align: center">
+                  <h4>Google Maps Integration</h4>
+                  <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
+                </div>
+              </div>
+            </div> <!-- End Single Service -->
+          </div>
         </div>
       </div> <!-- End Service Area -->
       <!-- Start Portfolio Area -->
