--- a/templates/index.html
+++ b/templates/index.html
@@ -434,7 +434,7 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Realtime Multiplayer</h4>
+                  <h4>Multiplayer Capabilities</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
@@ -444,7 +444,7 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Customizable Avatars</h4>
+                  <h4>Realtime Voice & Video</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
                 </div>
               </div>
@@ -454,19 +454,19 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Google Maps Integration</h4>
+                  <h4>Synced Player Interactions</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
           </div>
-          <div class="row">
+          <div class="row" style="padding-top: 70px;">
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Realtime Multiplayer</h4>
+                  <h4>Administrator-Regulated</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
@@ -476,7 +476,7 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Customizable Avatars</h4>
+                  <h4>Scalable Platform</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
                 </div>
               </div>
@@ -486,19 +486,19 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Google Maps Integration</h4>
+                  <h4>Customizable Avatars</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
           </div>
-          <div class="row">
+          <div class="row" style="padding-top: 70px;">
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Realtime Multiplayer</h4>
+                  <h4>Lifelike Graphics</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
@@ -508,7 +508,7 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Customizable Avatars</h4>
+                  <h4>Immersive Experience</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
                 </div>
               </div>
@@ -518,7 +518,7 @@
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Google Maps Integration</h4>
+                  <h4>Diverse Player Animations</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
                 </div>
               </div>
